force-app/main/default/objects/AssyPartDefinition__c/AssyPartDefinition__c.object-meta.xml
<CustomObject>
    <label>AssyPartDefinition</label>
    <nameField>
        <label>AssyPartDefinition</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AssyPartDefinition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>