force-app/main/default/objects/AssyPartDefinition__c/fields/ASSYPARTNO__c.field-meta.xml
<CustomField>
    <fullName>ASSYPARTNO__c</fullName>
    <label>ASSYPARTNO</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>