force-app/main/default/objects/AssyPartDefinition__c/fields/Field103__c.field-meta.xml
<CustomField>
    <fullName>Field103__c</fullName>
    <label>Field103</label>
    <length>255</length>
    <type>Text</type>
</CustomField>