force-app/main/default/objects/AssyPartDefinition__c/fields/Field105__c.field-meta.xml
<CustomField>
    <fullName>Field105__c</fullName>
    <label>Field105</label>
    <length>255</length>
    <type>Text</type>
</CustomField>