force-app/main/default/objects/AssyPartDefinition__c/fields/LeadTimeSchedule__c.field-meta.xml
<CustomField>
    <fullName>LeadTimeSchedule__c</fullName>
    <label>LeadTimeSchedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>