force-app/main/default/objects/AssyPartDefinition__c/fields/Managed_In__c.field-meta.xml
<CustomField>
    <fullName>Managed_In__c</fullName>
    <label>Managed-In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>