force-app/main/default/objects/AssyPartDefinition__c/fields/Product_Ref__c.field-meta.xml
<CustomField>
    <fullName>Product_Ref__c</fullName>
    <label>Product Ref</label>
    <length>20</length>
    <type>Text</type>
</CustomField>