force-app/main/default/objects/AssyPartDefinition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ASSYPARTNO__c</columns>
    <columns>BRAND__c</columns>
    <columns>PartRevision__c</columns>
    <columns>Managed_In__c</columns>
    <columns>Product_Ref__c</columns>
    <columns>Configurator__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Ref__c</field>
        <operation>equals</operation>
        <value>PS</value>
    </filters>
    <label>All</label>
</ListView>